@@ -1,3 +1,10 @@
+Sun Apr 17 21:57:52 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/ServantSourceGenerator.cpp:
+        
+          Removed unnecessary _narrow() and local variable from generated
+          event push operations.
+
 Sun Apr 17 16:05:57 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
 	
 	* DAnCE/examples/Swapping/Sender/Sender_exec_1.cpp
